@@ -6,6 +6,6 @@ DIST fedora.png 11606 RMD160 766c23052bd3f6d323e80f4b702e47e31d8b7671 SHA1 61bb2
 EBUILD 389-console-1.1.3.ebuild 1579 RMD160 ab449040867deaa855234bbfa94786e788d7cccf SHA1 4e44054145dd49768ef82221ff1e88680ee29b38 SHA256 e6ad67a221be34b06a6d88e2e9b4c424074781dbcf5fa4a5873e5514a9df39b7
 EBUILD 389-console-1.1.4_alpha1.ebuild 1680 RMD160 ae6ab8f41dc59b0888e5d90f627191ff88ba9a3c SHA1 e123d2ac2549d410dda344322960e4d6607c8323 SHA256 92da8dd371c6d12009694243ede81dfc696698ba2e3a4cebc4c4d80ecb9fb35c
 EBUILD 389-console-1.1.5.ebuild 1626 RMD160 b183940131cfcaf5c52bfaa6243207d8a49ac78c SHA1 257a46a541add88d6fb61d38b3cdab9ba1296543 SHA256 fd78424c098e8bd4bda8df122cf9009eef621f02111515bfdcef27236e0e74a2
-EBUILD 389-console-1.1.6.ebuild 1626 RMD160 b183940131cfcaf5c52bfaa6243207d8a49ac78c SHA1 257a46a541add88d6fb61d38b3cdab9ba1296543 SHA256 fd78424c098e8bd4bda8df122cf9009eef621f02111515bfdcef27236e0e74a2
-MISC ChangeLog 3091 RMD160 0e447216f3b75aaee0395640f26a2cd9e142ead2 SHA1 247d3787bf6c96d0a693b8bcedfface3f2cf71e8 SHA256 6bc1b84e9845c5cb6a34c6d661b657a6af03908c96e8a9f9f3db69cd48850114
+EBUILD 389-console-1.1.6.ebuild 1624 RMD160 c38f3ff11313b4a79bf7cc583cdf06b61d2aa83d SHA1 2f452b39271f9278d3c8fc77add2e830a805be11 SHA256 08b9f1c4d4f8bff74990d04c71c7b7a03a24b1e407b5a7b09bbaef94b89bd47f
+MISC ChangeLog 3184 RMD160 7bbeeb47f50a72d440ad535729e2289eaf6ffddf SHA1 6cc02abb3e5e49dacaa13ba64805ac4676df9288 SHA256 21364c131ccd356edfc71f1f3acc848be090fbdf1325b64a017f25b7a4e4ef5a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
